tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern8.sk
fun matcher(value: Int): Int {
  value match {
  | 42 -> 42
  | 3 -> 101
  | 42 ->
    112 // duplicate pattern
  }
}
